cabal-version:       2.0
name:                fedora-img-dl
version:             0.1
synopsis:            Fedora image download tool
description:         Tool to download Fedora iso and image files
license:             GPL-3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4

executable fedora-img-dl
  main-is:             Main.hs

  build-depends:       basic-prelude,
                       bytestring,
                       directory,
                       filepath,
                       html-conduit,
                       http-client,
                       http-client-tls,
                       http-types,
                       hxt,
                       network-uri,
                       optparse-applicative,
                       simple-cmd,
                       simple-cmd-args >= 0.1.1,
                       text,
                       xdg-userdirs,
                       xml-conduit

  ghc-options:         -fwarn-missing-signatures
                       -Wall
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
